# hospital

./: BUILD.bazel  README.md  report.cpp
data/: patients.cpp  patients.h
org/: BUILD.bazel  hospital.cpp  hospital.h  patient.cpp  patient.h
test/: BUILD.bazel  hospital_test.cpp  patient_test.cpp
